<resources>
    <string name="app_name">WeDriveTest</string>
    <string name="app_pref_name">com.wedrive.test.PREF</string>

    <!-- 공통 -->
    <string name="common_exit_confirm">한 번 더 누르면 종료됩니다.</string>
    <string name="common_cancel">취소</string>

    <!-- 로그인 -->
    <string name="login_id">아이디</string>
    <string name="login_id_hint">아이디 입력해주세요</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_pw_hint">비밀번호 입력해주세요</string>
    <string name="login_login">로그인</string>
    <string name="login_auth_fail">인증정보가 만료되었습니다. 다시 로그인해 주세요.</string>

    <!-- 홈 -->
    <string name="home_search_hint">Search</string>
    <string name="home_search_recent">최근 검색어</string>
    <string name="home_search_reset">검색기록초기화</string>
    <string name="home_last_post">마지막 게시물입니다</string>
</resources>