<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SpUsage, ContentDescription, Autofill">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_logo" />

            <!-- 아이디 -->
            <TextView
                android:id="@+id/tv_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:text="@string/login_id"
                android:textSize="16dp"
                android:textColor="@color/mono_3" />
            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/tv_id_title"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textSize="16dp"
                android:textColor="@color/mono_1"
                android:maxLength="20"
                android:hint="@string/login_id_hint" />

            <!-- 비밀번호 -->
            <TextView
                android:id="@+id/tv_pw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_id"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:text="@string/login_pw"
                android:textSize="16dp"
                android:textColor="@color/mono_3" />
            <EditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/tv_pw_title"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:textColor="@color/mono_1"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:hint="@string/login_pw_hint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 로그인 버튼 -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/login_login"
            android:textSize="16dp" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>